fix:채널 조회 비로그인 사용자 적용(#83)
Former-commit-id: 968cb85726d7777398dcf75cfd2b5f63f220b274